package br.ufscar.dc.dsw.domain.users;


public class Member extends Person {
    
}