package br.ufscar.dc.pooa.domain.rooms;

public class FamilyRoom extends DefaultRoom{
    
}
