package br.ufscar.dc.pooa.domain.rooms;

public class SingleRoom extends DefaultRoom {
    
}
