package br.ufscar.dc.pooa.domain.rooms;

public class SuiteRoom extends DefaultRoom{
    
}
