package br.ufscar.dc.pooa.interfaces;

import java.util.Date;
import java.util.List;

public interface ReservationState {
    ReservationState getReservation();
    ReservationState updateReservation();
}
