@startuml
title Diagrama de Classes Reserva de Hotel

abstract class Person {
    +personId: int 
    +name : str
    +birthday: Date
    +phone: str
}


class Client extends DefaultUser {
    +members: list<Member>
    +state : Reservation
    add_member(): bool
    remove_member(): bool
    +setReservationState(): void
    +getReservationState(): ReservationState
    +updateReservationState(): void
}

abstract class DefaultUser extends Person {
    +username: str
    +password: str
    +email: str
    +isSuperUser: bool 
    +isActive: bool 
}

class Admin <<Singleton>> extends DefaultUser {

    +createUser(String name,String password,bool isSuperUser,bool isActive): bool
    +getInstance(): Admin
    +getUser(): User
    +updateUser(): bool
    +deleteUser(): bool
    +getUsers(): list<User>
    +makeReservation(): bool
    +cancelReservation(): bool
    getReservations(): list<Reservation>
    +createRoom(): bool
}


class Member extends Person {
}


class Hotel <<Singleton>> {
    +name: str
    +address: Address
    +isFull: bool
    +clients: list<Client>
    +admins: list<Admin>
    +rooms: list<DefaultRoom>
    +services: list<Service>
    +reservations: list<Reservation>
}

class Address {
    +country: str
    +state: str
    +city: str
    +postalCode: str
    +street: str
    +number: int
}

interface Room {
    +createRoom(): int
    +getRoom(): Room
    +updateRoom(): bool
    +deleteRoom(): bool
    +getRooms(): list<Room>
    +getAvailableRoom(): list<Room>
    +getPrice(): float
    +area(): float
    +volume(): float
}

abstract class DefaultRoom implements Room {
    +roomId: int
    +isActive: bool
    +isReserved: bool
    +width: float
    +length: float
    +height: float
    +capacity: int
    +price: float
    +description: str
}


class SingleRoom extends DefaultRoom {
}

class SuiteRoom extends DefaultRoom {
}

class FamilyRoom extends DefaultRoom {
}

interface Service {
    +createService(): int
    +getService(): Service
    +updateService(): bool
    +deleteService(): bool
    +getServices(): list<Service>
    +getAvailableService(): list<Service>
}

class DefaultService implements Service {
    +name: str
    +capacity: int 
    +description: str

}

interface ReservationState <<State>> {
    +getReservation(): Reservation
    +updateReservation(String date, String time, String room, String user): Reservation
}

class Reserved <<Singleton>> implements Reservation {
}

class Canceled <<Singleton>> implements Reservation {
}

class ConexaoUtil {
    +getConnection(): Connection
}

class ClientDAO {
    +insert(Client): void
    +update(Client): void
    +delete(int id): void
    +readClientList(): list<Client>
}



Hotel "1" o-- "1"     Address: have
Hotel "1" *-- "1..*"  Admin: have
Hotel "1" *-- "0..*"  Client: have
Hotel "1" o-- "0..*"  DefaultRoom: have
Hotel "1" o-- "0..*"  DefaultService: have
Hotel "1" o-- "0..*"  DefaultReservation: have

Admin "1" --- "0..*"  Service: manages
Admin "1" --- "0..*"  Room: manages
Admin "1" --- "0..*"  Reservation: manages
Admin "1" --- "1"     Hotel: manages


Client "1" *-- "0..*" Member: have
@enduml
